--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -10,8 +10,8 @@
     	<div class="row">
     		<div class="col justify-content-center">
 		      <h1 class="d-flex justify-content-center pb-2">Best Movies</h1>
-					<div th:unless="${visible}" th:each="movie : ${movies}" class="fs-3 justify-content-center d-flex"><a class="text-decoration-none" th:href="@{|/movies/${movie.getId()}|}">[[${movie.getTitle()}]]</a></div>
-					<div th:unless="${visible}" th:text="${movie}" class="fs-3 justify-content-center d-flex"></div>
+					<div th:if="${visible}" th:each="movie : ${movies}" class="fs-3 justify-content-center d-flex"><a class="text-decoration-none" th:href="@{|/movies/{id} (id=${movie.getId()})}" th:text="${movie.getTitle()}"></a></div>
+					<div th:if="${visible}" th:text="${movie}" class="fs-3 justify-content-center d-flex"></div>
 				</div>	
     	</div>
     </div>
