--- a/src/main/resources/templates/songs.html
+++ b/src/main/resources/templates/songs.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <div th:replace="~{fragments :: head}"></div>
-    <title>Best Songs</title>
-  </head>
-  <body>
-    <div th:replace="~{fragments :: header}"></div>
-    <div class="container-xl">
-    	<div class="row">
-    		<div class="col justify-content-center">
-		      <h1 class="d-flex justify-content-center pb-2">Best Songs</h1>
-					<div th:if="${visible}" th:each="song : ${songs}" class="fs-3 justify-content-center d-flex"><a class="text-decoration-none" th:href="@{/songs/{id} (id= {song.getId()})}" th:text="${song.getTitle()}"></a></div>
-					<div th:if="${visible}" th:text="${song}" class="fs-3 justify-content-center d-flex"></div>
-				</div>	
-    	</div>
-    </div>
-    <div th:replace="~{fragments :: bsScript}"></div>
-  </body>
+	<head>
+		<div th:replace="~{fragments :: head}"></div>
+		<title>Best Songs</title>
+	</head>
+	<body>
+		<div th:replace="~{fragments :: header}"></div>
+		<div class="container-xl">
+			<div class="row">
+				<div class="col justify-content-center">
+					<h1 class="d-flex justify-content-center pb-2">Best Songs</h1>
+					<div th:if="${visible}" th:each="song : ${songs}"
+						class="fs-3 justify-content-center d-flex">
+						<a class="text-decoration-none"
+							th:href="@{/songs/{id} (id= {song.getId()})}"
+							th:text="${song.getTitle()}"></a>
+					</div>
+					<div th:if="${visible}" th:text="${song}"
+						class="fs-3 justify-content-center d-flex"></div>
+				</div>
+			</div>
+		</div>
+		<div th:replace="~{fragments :: bsScript}"></div>
+	</body>
 </html>
