--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-<th:block th:fragment="head">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-		crossorigin="anonymous">
-</th:block>
-</head>
-<body>
-	<header  th:fragment="header">
-		<nav class="navbar navbar-expand-lg bg-body-tertiary">
-			<div class="container-fluid">
-				<a class="navbar-brand disabled">Best of</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-					aria-controls="navbarSupportedContent" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<div class="navbar-nav">
-						<a class="nav-link active" aria-current="page" href="/bestoftheyear?name=Vincenzo">Home</a>
-						<a class="nav-link" href="/movies">Movies</a>
-						<a class="nav-link" href="/songs">Songs</a>
+	<head>
+	<th:block th:fragment="head">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+			crossorigin="anonymous">
+	</th:block>
+	</head>
+	<body>
+		<header th:fragment="header">
+			<nav class="navbar navbar-expand-lg bg-body-tertiary">
+				<div class="container-fluid">
+					<a class="navbar-brand disabled">Best of</a>
+					<button class="navbar-toggler" type="button"
+						data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent" aria-expanded="false"
+						aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div class="collapse navbar-collapse" id="navbarSupportedContent">
+						<div class="navbar-nav">
+							<a class="nav-link active" aria-current="page"
+								href="/bestoftheyear?name=Vincenzo">Home</a> <a class="nav-link"
+								href="/movies">Movies</a> <a class="nav-link" href="/songs">Songs</a>
+						</div>
 					</div>
 				</div>
-			</div>
-		</nav>
-	</header>
-	<div th:fragment="textPlaceholder">
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae ligula id purus consequat scelerisque. Pellentesque laoreet cursus varius. Vivamus sed enim sollicitudin, lobortis felis at, dignissim turpis. Praesent id lacus dui. Donec molestie eros at nisi hendrerit accumsan. Nulla facilisi. Ut posuere ex sit amet vulputate interdum. Maecenas iaculis arcu ornare, ullamcorper augue at, egestas arcu. Duis dictum purus a mi vehicula, eu rhoncus purus euismod. Maecenas metus leo, blandit et pulvinar in, imperdiet eu ex. Nullam mattis augue pharetra, suscipit eros nec, facilisis leo.
-
-Sed et arcu a diam malesuada dapibus. Proin et dolor vel nibh pretium molestie at et magna. Suspendisse aliquet, sem nec vulputate semper, enim nibh dapibus sapien, ac efficitur eros massa a urna. Etiam viverra augue augue, ut lobortis metus faucibus a. Nulla sagittis nec lacus ut pellentesque. Phasellus dignissim leo quis tempus iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nunc tincidunt scelerisque lacus, in semper ex mattis eget. Fusce nulla sem, consequat eget feugiat feugiat, elementum id ex. Maecenas cursus libero eu libero commodo, quis vehicula nisi vehicula. Aliquam sagittis ante nibh, malesuada dapibus mi dictum sit amet. Duis condimentum nibh id lacus pellentesque, et rhoncus lacus vehicula. Phasellus blandit leo mauris, in tempus diam congue eget. Morbi tristique, nisi a dignissim gravida, dolor arcu lobortis augue, at cursus dui leo non ipsum.
-		</p>
-	</div>
-	<th:block th:fragment="bsScript">
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-			crossorigin="anonymous"></script>
-	</th:block>
-</body>
+			</nav>
+		</header>
+		<div th:fragment="textPlaceholder">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+				vitae ligula id purus consequat scelerisque. Pellentesque laoreet
+				cursus varius. Vivamus sed enim sollicitudin, lobortis felis at,
+				dignissim turpis. Praesent id lacus dui. Donec molestie eros at nisi
+				hendrerit accumsan. Nulla facilisi. Ut posuere ex sit amet vulputate
+				interdum. Maecenas iaculis arcu ornare, ullamcorper augue at, egestas
+				arcu. Duis dictum purus a mi vehicula, eu rhoncus purus euismod.
+				Maecenas metus leo, blandit et pulvinar in, imperdiet eu ex. Nullam
+				mattis augue pharetra, suscipit eros nec, facilisis leo. Sed et arcu
+				a diam malesuada dapibus. Proin et dolor vel nibh pretium molestie at
+				et magna. Suspendisse aliquet, sem nec vulputate semper, enim nibh
+				dapibus sapien, ac efficitur eros massa a urna. Etiam viverra augue
+				augue, ut lobortis metus faucibus a. Nulla sagittis nec lacus ut
+				pellentesque. Phasellus dignissim leo quis tempus iaculis. Vestibulum
+				ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+				curae; Nunc tincidunt scelerisque lacus, in semper ex mattis eget.
+				Fusce nulla sem, consequat eget feugiat feugiat, elementum id ex.
+				Maecenas cursus libero eu libero commodo, quis vehicula nisi
+				vehicula. Aliquam sagittis ante nibh, malesuada dapibus mi dictum sit
+				amet. Duis condimentum nibh id lacus pellentesque, et rhoncus lacus
+				vehicula. Phasellus blandit leo mauris, in tempus diam congue eget.
+				Morbi tristique, nisi a dignissim gravida, dolor arcu lobortis augue,
+				at cursus dui leo non ipsum.</p>
+		</div>
+		<th:block th:fragment="bsScript">
+			<script
+				src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+				integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+				crossorigin="anonymous"></script>
+		</th:block>
+	</body>
 </html>
